# smdr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  audit.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  release.yml
HomebrewFormula/: smdr.rb
docs/: index.md
skills/smdr-review/: SKILL.md
src/: annotate.rs  daemon.rs  draft.rs  ipc.rs  lib.rs  main.rs  markdown.rs  persist.rs  render.rs  theme.rs  watcher.rs
src/render/: app.rs  desktop.rs  images.rs  mod.rs  navigation.rs  search.rs  sidebar.rs  state.rs  styles.rs  update.rs  view.rs  widget.rs
tests/: cli_tests.rs  markdown_tests.rs  review_tests.rs  theme_tests.rs
