[package]
name = "mdr"
version = "0.1.0"
edition = "2024"
description = "A minimal desktop markdown reader"
license = "MIT"

[dependencies]
clap           = { version = "4", features = ["derive"] }
notify         = "9.0.0-rc.4"
open           = "5"
iced           = { version = "0.14", features = ["markdown", "highlighter", "tokio", "wgpu", "wayland", "x11", "svg", "image"] }
pulldown-cmark = "0.12"
mermaid-rs-renderer = { version = "0.2", default-features = false }
reqwest        = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile   = "3"

[profile.release]
opt-level = "s"
lto       = true
strip     = true
