[package]
name = "smdr"
version = "0.1.0"
edition = "2024"
description = "Simple Markdown Reader — a fast, native markdown viewer with vim-style navigation, live reload, and 22 themes"
license = "MIT"
repository = "https://github.com/santanusinha/smdr"
homepage = "https://github.com/santanusinha/smdr"
documentation = "https://docs.rs/smdr"
readme = "README.md"
keywords = ["markdown", "viewer", "iced", "reader", "terminal"]
categories = ["command-line-utilities", "gui", "visualization"]

[dependencies]
clap           = { version = "4", features = ["derive"] }
notify         = "9.0.0-rc.4"
open           = "5"
iced           = { version = "0.14", features = ["markdown", "highlighter", "tokio", "wgpu", "wayland", "x11", "svg", "image"] }
pulldown-cmark = "0.12"
mermaid-rs-renderer = { version = "0.2", default-features = false }
reqwest        = { version = "0.12", default-features = false, features = ["rustls-tls"] }
resvg          = "0.45"
usvg           = "0.45"
tiny-skia      = "0.11"
tokio          = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile   = "3"

[profile.release]
opt-level = "s"
lto       = true
strip     = true
